almost both frontend and backend finished

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_PUBLIC_FOLDER = http://localhost:5000/uploads/
+CLIENT_ID = a686ca53809d4af0ad6ba2abec0d201f
+CLIENT_SECRET = c15a6b6f31054b8994b318b05e5cad5d
