--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spotify-web-playback": "^0.14.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
+    "spotify-web-api-node": "^5.0.2",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.4"
   },
