--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_PUBLIC_FOLDER = http://localhost:5000/uploads/
-8CC8tIoYku1ClMDM
+REACT_APP_PUBLIC_FOLDER = https://music-player-backend-peti.onrender.com/uploads/
+BASE_URL = https://music-player-backend-peti.onrender.com/
